fixed card resizings howver they are aligned straight to the wall with no margins

--- a/personal-site/src/App.css
+++ b/personal-site/src/App.css
@@ -131,11 +131,6 @@
 
 
 
-.panelShade{
-  background-color: var(--secondaryColor);
-  border: 1px solid var(--borderColor);
-}
-
 
 
 
