--- a/personal-site/src/Styles/expandingCard.css
+++ b/personal-site/src/Styles/expandingCard.css
@@ -17,13 +17,15 @@
 /* } */
 .transition { transition: .3s cubic-bezier(.3, 0, 0, 1.3) }
 .card {
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
+    /* background-color: #fff; */
+
     bottom: 0;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
     /* height: 300px; */
-    height: 300px;
+    height: 400px;
     /* height: 30vh; */
     left: 0;
     /* margin: auto; */
@@ -38,11 +40,9 @@
     width: 100%;
     /* width: 300px; */
 }
-.card:hover {
+/* .card:hover {
   height: 400px;
-  /* height: 450px; */
-    /* width: 300px; */
-}
+} */
 /* .buffer{
     height: 400px; 
     background-color: red;
@@ -59,30 +59,43 @@
     border-radius: 0;
     margin-top: 0px;
     width: 100%;
+    height: 250px;
     /* height: 200px; */
 }
 .card:hover h2 {
-    background: #3487f7;
+    /* background: #3487f7; */
+    font-size: 3rem;
+    background: #00000077;
+    /* filter: blur(1px); */
+    /* background: #971d07; */
+
     color: #fff;
     margin-top: 100px;
     padding: 5px;
+    mix-blend-mode: multiply;
 }
 .card:hover h2 small { color: #fff }
-.card:hover p { margin-top: 300px }
+.card:hover p { margin-top: 290px }
 .card_circle {
     /* background: url('http://lorempixel.com/400/200') no-repeat center bottom; */
-    background-color: #3487f7;
+    /* background-color: #3487f7; */
     background-size: cover;
-    border-radius: 50%;
-    height: 250px;
+    border-radius: 0 0 50% 50%;
+    height: 160px;
     /* height: 400px; */
     /* height: 100%; */
     /* margin-left: -75px; */
-    margin-top: -125px;
+    /* margin-top: -90px; */
     /* margin-top: -270px; */
     position: absolute;
     /* width: 100%; */
     width: 450px;
+    overflow: hidden;
+    border: 10px rgb(245, 245, 245) solid;
+
+    /* -webkit-box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+    -moz-box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+    box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1); */
 }
 /* h2 {
     color: #3487f7;
@@ -105,23 +118,55 @@ p {
     text-align: center;
     z-index: 9999;
 } */
+.card:hover .card-img { 
+    /* top: 0px; */
+    height: 100%;
+}
+.card-img{
+    /* display: none; */
+    position: absolute;
+    width: 100%;
+    
+    top: 0px;
+    z-index: 1;
+    /* top: 90px; */
+    /* -webkit-box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+    -moz-box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+    box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1); */
+}
+/* .card-img::before{
+    content: "";
+    position: relative;
+    top: 0;
+    left:0;
+    z-index: 5;
+    background-color: red;
+    -webkit-box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+    -moz-box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+    box-shadow: inset 0px -200px 159px -60px rgba(0,0,9,1);
+} */
 .card h2 {
   color: #3487f7;
   font-family: 'Raleway', sans-serif;
   font-size: 24px;
-  font-weight: 200;
-  margin-top: 150px;
+  /* font-weight: 200; */
+  font-weight: 900;
+  margin-top: 190px;
   position: absolute;
   text-align: center;
   width: 100%;
   z-index: 9999;
+  /* mix-blend-mode: multiply; */
+
 }
 .card p {
   color: rgba(0,0,0,.6);
   font-family: 'Raleway', sans-serif;
   font-size: 100%;
   font-weight: normal;
-  margin-top: 200px;
+  margin-top: 230px;
+  margin-left: 20px;
+  margin-right: 20px;
   position: absolute;
   text-align: center;
   z-index: 9999;
