--- a/personal-site/src/Styles/landingPage.css
+++ b/personal-site/src/Styles/landingPage.css
@@ -5,10 +5,13 @@
     --secondaryColor:#eaeaea2f;
       /* --secondaryColor:#fff; */
   
-      --borderColor:#c1c1c1;
+      /* --borderColor:#c1c1c1; */
+      --borderColor:#c1c1c18c;
+
   
       --mainText:black;
       --secondaryText:#4b5156;
+      /* --secondaryText:#ffffff; */
   
       --themeDotBorder:#24292e;
   
@@ -36,7 +39,8 @@
   
   h1, h2, h3, h4, h5, h6, strong{
       color: var(--mainText);
-      font-family: 'Russo One', sans-serif;
+      /* font-family: 'Russo One', sans-serif; */
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
   }
   
@@ -95,6 +99,7 @@
   @media only screen and (min-width: 500px){
     .s1, .s2 {
         margin: 0px 10vw;
+        /* width:40vw */
     }
     h1 { font-size: 5rem;}
     
@@ -237,7 +242,7 @@
   
   
   .main-container{
-      width: 100%;
+      /* width: 100%; */
     margin: 0 auto;
   }
   
@@ -245,7 +250,7 @@
     width: 100%;
     margin: 0 auto;
     background-color: var(--secondaryColor);
-      border-bottom:1px solid var(--borderColor);
+      /* border-bottom:1px solid var(--borderColor); */
   }
   
   .greeting-wrapper{
@@ -259,8 +264,8 @@
   }
   
   .intro-wrapper{
-      background-color: var(--secondaryColor);
-      border:1px solid var(--borderColor);
+      /* background-color: var(--secondaryColor); */
+      /* border:1px solid var(--borderColor); */
       border-radius:5px 5px 0 0;
   
   
@@ -275,6 +280,15 @@
           'left-column right-column'
       ;
   }
+
+
+.panelShade{
+    background-color: var(--secondaryColor);
+    border: 1px solid var(--borderColor);
+    border-radius:5px 5px 0 0;
+    /* border: 2px solid black */
+  }
+  
   
   
   .nav-wrapper{
@@ -335,9 +349,15 @@
   
   
   .left-column{
-      grid-area: left-column;
+    grid-area: left-column;
+    display: grid;
+    align-content: center;
+
+    padding-top: 50px;
+    padding-bottom: 50px;
+      /* grid-area: left-column;
       padding-top:50px;
-      padding-bottom: 50px;
+      padding-bottom: 50px; */
   }
   
   #profile_pic{
@@ -416,22 +436,81 @@
   }
   
   
-  #preview-shadow{
+  .preview-shadow{
       background-color: var(--previewShadow);
       max-width: 300px;
       height: 180px;
       padding-left: 30px;
       padding-top: 30px;
   }
-  
-  #preview{
-      width: 300px;
+  .previewContainer{
+    /* width: 300px; */
+    max-width: 100%;
+    position: relative;
+    /* border:1.5px solid #17a2b8;
+    background-color: var(--previewBg);
+    padding:15px;
+    position: relative;
+    padding: 4rem 2rem;
+    z-index: 10; */
+    /* font-family: 'Montserrat', sans-serif; */
+}
+  .preview{
+      /* width: 100%; */
+      /* width: calc(100% - 30px); */
       border:1.5px solid #17a2b8;
       background-color: var(--previewBg);
       padding:15px;
       position: relative;
+      padding: 4rem 2rem;
+      z-index: 10;
+      margin-left: 30px;
+      margin-top: 30px;
+      /* font-family: 'Montserrat', sans-serif; */
   }
-  
+  .previewContainer::before{
+    content: ' ';
+    position: absolute;
+    /* top: -10px; */
+    left:  0;
+    top: 0;
+    /* background-color: red; */
+    background-color: var(--previewShadow);
+    width: 300px;
+    height: 180px;
+    z-index: 1;
+    /* padding-left: 30px;
+    padding-top: 30px; */
+  }
+  .resumeWrapper{
+      margin: 15vh 5vw 20vh 5vw;
+  }
+  .preview h3{
+      color:#3E6EA7;
+      margin-top: 0rem;
+      margin-bottom: 2rem;
+      
+      /* mix-blend-mode: multiply; */
+  }
+  .preview *{
+    font-family: 'Montserrat', sans-serif;
+    
+    /* mix-blend-mode: multiply; */
+}
+/* .preview a, .preview p{
+    font-family: 'Montserrat', sans-serif;
+     */
+    /* mix-blend-mode: multiply; */
+/* } */
+  .preview-shadow.findMeWrapper{
+      padding-left:0;
+      padding-right: 30px;
+      margin: 13vh 5vw 20vh 5vw;
+  }
+  .preview-shadow.findMeWrapper div{
+      /* left: 100%; */
+    right: calc(30px + 2rem);
+}
   .corner{
       width:7px;
       height: 7px;
@@ -468,8 +547,12 @@
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       padding-bottom: 50px;
       padding-top: 50px;
-      gap:100px;
+      /* gap:100px; */
+      /* grid-gap: 100px; */
+      row-gap: 50px;
+      column-gap: 50px;
   }
+
   
   
   #skills{
@@ -482,6 +565,9 @@
       display: grid;
       align-content: center;
       text-align: center;
+  }
+  .social-links h3{
+      color: white;
   }
   
   #social_img{
@@ -599,14 +685,14 @@
   }
   
   @media screen and (max-width: 400px){
-      #preview-shadow{
+      .preview-shadow{
           max-width: 280px;
           height: 180px;
           padding-left: 10px;
           padding-top: 10px;
       }
   
-      #preview{
+      .preview{
           width: 280px;
   
       }
