--- a/personal-site/src/Styles/navbar.css
+++ b/personal-site/src/Styles/navbar.css
@@ -59,12 +59,12 @@
   /* } */
   
 }
-@media only screen and (min-width: 1500px){
+/* @media only screen and (min-width: 1500px){
   .navbarWrapper *{
       position: relative;
       left: -1.3vw;
   }
-}
+} */
 
 
 
